- Encode base64 fixes (github #67).
- openSaveAsDialog fixes (github #19).
- Add/remove event listeners doc fixes (github #16).
- Update ShowDialog doc fixes (github #101).
- Remove legacy update manager.
- Remove legacy apidoc folder.
- Fold in TideSDK-User-Docs into doc folder.
- Fixed Logger Issue (Ti.API.setLogLevel not working)
- Fixed Window focus issue when not transparent background

1.3.1-beta (released 2012-11-15)
--------------------------------

- Fixes related to linux SDK installer

1.3.0-beta (released 2012-11-12)
--------------------------------

- Updated to support the following platforms:
  - Windows XP
  - Windows Vista
  - Windows 7
  - Windows 8
  - Mac OSX Lion (10.7)
  - Mac OSX Mountain Lion (10.8)
  - Ubuntu 12.04
- Rebranded throughout.
- Updated JQuery libs.
- Updated Growl SDK integration for notifications in OSX.
- New proxy implementation to work with transparent and authentication
  proxies.
- Code base reorganized and cleaned up for future development.
- c++ namespace changes
- Kroll bridge project is not longer separately maintained. Code is now fully
  integrated into TideSDK.
- libkroll is now libtide.
- Fixes to Drillbit tests.
- Bug fixes.
- Updated documentation at http://tidesdk.multipart.net/docs/user-dev/generated
 
Breaking Changes
~~~~~~~~~~~~~~~~

- Installers will install to the following locations:
  - Windows 8: C:\ProgramData\TideSDK
  - Windows 7: C:\ProgramData\TideSDK
  - Windows Vista: C:\Documents and Settings\All Users\Application Data\TideSDK
  - Windows XP: C:\Documents and Settings\All Users\Application Data\TideSDK
  - OSX (Lion and Mountain Lion): ~/Library/Application\ Support/TideSDK
  - Ubuntu Linux: .tidesdk 
- Global JavaScript namespace is now Ti (changed from Titanium)
- Previous Titanium.Include() method has been removed.
- Modules in manifext.txt are no longer prefaced with ti.
  ie. ti.Codec is now codec