@@ -50,7 +50,7 @@ namespace TideBoot
         // It will be placed there by the update service. If it exists
         // and the version in the update file is greater than the
         // current app version, we want to force an update.
-        string file = FileUtils::GetApplicationDataDirectory(GetApplicationName());
+        string file = FileUtils::GetApplicationDataDirectory(app->id);
         file = FileUtils::Join(file.c_str(), UPDATE_FILENAME, NULL);
 
         if (FileUtils::IsFile(file))
