@@ -1,6 +1,6 @@
 #appname:Drillbit
 #version:0.5.0
-#appid:org.tidesdk.unittest.driver
+#appid:org.tidesdk.Drillbit
 #publisher:Software In Public Interest (SPI)
 #image:default_app_logo.png
 #url:http://tidesdk.org
