@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <ti:app xmlns:ti='http://ti.tidesdk.org'>
-<id>org.tidesdk.unittest.driver</id>
+<id>org.tidesdk.Drillbit</id>
 <name>Drillbit</name>
 <version>1.0</version>
 <publisher>Software In Public Interest (SPI)</publisher>
